--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="/pages/script.js" defer></script>
-    <link rel="stylesheet" href="/pages/index.css">
-    <link rel="stylesheet" href="/styles/global.css">
-    <link rel="stylesheet" href="/styles/input&buttons.css">
-    <link rel="stylesheet" href="/styles/modal.css">
+    <script src="./pages/script.js" defer></script>
+    <link rel="stylesheet" href="./index.html">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/input&buttons.css">
+    <link rel="stylesheet" href="./styles/modal.css">
 </head>
 <body>
     <header>
         <nav>
             <section>
                 <h2>TechBlog</h2>
-                <img src="/imgs/menu.png" alt="" class="menu">
+                <img src="./imgs/menu.png" alt="" class="menu">
             </section>
             <ul>
                 <li>All</li>
@@ -27,10 +27,10 @@
             </ul>
         </nav>
         <div>
-            <img src="/imgs/search.png" alt="" class="search-icon">
+            <img src="./imgs/search.png" alt="" class="search-icon">
             <input type="text" placeholder="Pesquisar por...">
             <span>
-                <img src="/imgs/profile.png" alt="">
+                <img src="./imgs/profile.png" alt="">
                 <p>Samuel Leão</p>
             </span>
         </div>
