--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./pages/script.js" defer></script>
-    <link rel="stylesheet" href="./index.html">
+    <link rel="stylesheet" href="./pages/index.css">
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/input&buttons.css">
     <link rel="stylesheet" href="./styles/modal.css">
